--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@tabler/icons-react": "^2.47.0",
+    "@types/aos": "^3.0.7",
+    "aos": "^2.3.4",
     "framer-motion": "^10.18.0",
     "next": "14.1.0",
     "react": "^18",
