--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "swiper": "^11.0.5"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/next": "^8.0.7",
+    "@types/node": "^20.17.19",
+    "@types/react": "^18.3.18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5.7.3"
   }
 }
