--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
     "@types/aos": "^3.0.7",
     "aos": "^2.3.4",
     "framer-motion": "^10.18.0",
-    "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/next": "^8.0.7",
     "@types/node": "^20.17.19",
     "@types/react": "^18.3.18",
-    "@types/react-dom": "^18",
+    "@types/react-dom": "^18.3.5",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
